[gd_scene load_steps=5 format=3 uid="uid://bkgl4ix80w08s"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_ba0eo"]
[ext_resource type="Texture2D" uid="uid://ccxlw0yo46636" path="res://Sprites/shanes/chicken/471d5eed-7935-4d0b-b611-e8f527f4c545.png" id="2_fod02"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0idau"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_fod02")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7mswq"]
radius = 9.05539

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_ba0eo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1.17416, -0.82133)
scale = Vector2(1.05161, 1.07367)
sprite_frames = SubResource("SpriteFrames_0idau")
animation = &"Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -1)
shape = SubResource("CircleShape2D_7mswq")

[node name="coyote_timer" type="Timer" parent="."]
one_shot = true

[node name="fullhop_timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="coyote_timer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="fullhop_timer" to="." method="_on_fullhop_timer_timeout"]
